# political-discourse-analyzer

./: .dockerignore  .gitignore  .nixpacks.toml  Dockerfile  Procfile  README.md  package-lock.json  pyproject.toml  railway.toml
.github/workflows/: sync-drive.yml
analysis_results/: analysis_report.html  analysis_report.md  analysis_report.tex  basic_stats.csv  engagement_metrics.csv  interactions.csv  research_report.md  topic_analysis_combined_analysis.csv  topic_analysis_embedding_analysis.csv  topic_analysis_linguistic_analysis.csv  topic_analysis_llm_analysis.csv  topic_distribution.csv
data/db/: discourse.db
data/programs/: .processed_files.txt
frontend/: index.html  package-lock.json  package.json  railway.toml  vite.config.ts
frontend/analysis_results/: analysis_report.html  research_report.md
frontend/analysis_results/report_package/: analysis_report.tex
frontend/public/: service-worker.js
frontend/src/: App.tsx  index.css
frontend/src/components/: LegalNotice.tsx  LoadingIndicator.tsx  ProgramsNotice.tsx  SuggestedQuestions.tsx
src/political_discourse_analyzer/: __init__.py  run.py
src/political_discourse_analyzer/core/: initialize.py  main.py
src/political_discourse_analyzer/models/: settings.py
src/political_discourse_analyzer/services/: __init__.py  analytics_service.py  assistant_service.py  database_service.py  sqlite_service.py
src/political_discourse_analyzer/utils/: __init__.py  analysis_script.py  db_management.py  diagnostic.py  document_checker.py  report_generator.py
src/political_discourse_analyzer/utils/templates/: report_template.html  report_template.tex
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_services/: test_database.py
tests/test_utils/: test_document_checker.py
