[tool.poetry]
name = "political-discourse-analyzer"
version = "0.1.0"
description = "Herramienta de análisis de discursos políticos mediante IA"
authors = ["Angélica Laza <angi.laza@hotmail.es>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
langchain = "^0.2.5"
openai = "^1.0.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
PyPDF2 = "^3.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
psycopg2-binary = "^2.9.9"
spacy = "3.7.5"
scikit-learn = "^1.4.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
networkx = "^3.4.2"
scipy = "^1.15.1"
wordcloud = "^1.9.4"
markdown = "^3.7"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"  # Actualizamos a la versión 8.2
pytest-asyncio = "^0.25.3"
black = "^24.1.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]